* Update to UCS 4.0 (Bug #35138)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51120 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-debug/debian/changelog
+++ b/base/univention-debug/debian/changelog
@@ -1,3 +1,9 @@
+univention-debug (7.0.0-1) unstable; urgency=low
+
+  * Update to UCS 4.0 (Bug #35138)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 17 Jun 2014 13:40:44 +0200
+
 univention-debug (6.0.0-1) unstable; urgency=low
 
   * do not log ERROR to syslog (Bug #25469) 
