Bug #35135: changelog entry
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51131 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/packaging/ucslint/debian/changelog
+++ b/packaging/ucslint/debian/changelog
@@ -1,3 +1,9 @@
+ucslint (4.0.0-1) unstable; urgency=low
+
+  * Bug #35135: bumped version for UCS 4
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Tue, 17 Jun 2014 14:34:18 +0200
+
 ucslint (3.0.5-2) unstable; urgency=low
 
   * Bug #34127: Add support for RedMine issues in changelog
