--- a/base/univention-config-registry/debian/changelog
+++ b/base/univention-config-registry/debian/changelog
@@ -1,3 +1,9 @@
+univention-config-registry (10.0.0-1) unstable; urgency=low
+
+  * Update to UCS 4.0 (Bug #35138)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 17 Jun 2014 15:08:06 +0200
+
 univention-config-registry (9.0.6-9) unstable; urgency=low
 
   * Set the default for ldap/client/retry/count to 10 (Bug #34293)
