--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,12 @@
+ucs-test (4.0.166-35) unstable; urgency=low
+
+  * Bug #33571: App Center: Test whether the server is registered on the
+    appcenter/app object
+  * Bug #33572: App Center: Test whether the webinterface is correctly
+    registered
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Tue, 17 Jun 2014 16:40:12 +0200
+
 ucs-test (4.0.166-34) unstable; urgency=low
 
   * Bug #35102: stop mailsink after usage
