--- a/base/univention-config-registry/debian/changelog
+++ b/base/univention-config-registry/debian/changelog
@@ -1,3 +1,9 @@
+univention-config-registry (10.0.1-1) unstable; urgency=low
+
+  * Removed UCS 2.4 <-> UCS 3.0 hack for python upgrade (Bug #35138)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 17 Jun 2014 16:45:20 +0200
+
 univention-config-registry (10.0.0-1) unstable; urgency=low
 
   * Update to UCS 4.0 (Bug #35138)
