--- a/base/univention-policy/debian/changelog
+++ b/base/univention-policy/debian/changelog
@@ -1,3 +1,9 @@
+univention-policy (6.0.0-1) unstable; urgency=low
+
+  * Update to UCS 4.0 (Bug #35138)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 17 Jun 2014 17:03:24 +0200
+
 univention-policy (5.0.9-4) unstable; urgency=low
 
   * reverted last commit, use FREE in
