Fixed typo in commit message (Bug #35138)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51140 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-debug/debian/changelog
+++ b/base/univention-debug/debian/changelog
@@ -1,6 +1,6 @@
 univention-debug (7.0.0-2) unstable; urgency=low
 
-  * Sitch to python2.7 (Bug #35138)
+  * Switch to python2.7 (Bug #35138)
 
  -- Stefan Gohmann <gohmann@univention.de>  Tue, 17 Jun 2014 13:45:08 +0200
 
