--- a/base/univention-debug/debian/changelog
+++ b/base/univention-debug/debian/changelog
@@ -1,3 +1,9 @@
+univention-debug (7.0.1-1) unstable; urgency=low
+
+  * Activate ucslint (Bug #35138)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Tue, 17 Jun 2014 17:06:16 +0200
+
 univention-debug (7.0.0-2) unstable; urgency=low
 
   * Switch to python2.7 (Bug #35138)
