--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,9 @@
+univention-ldap (10.0.17-35) unstable; urgency=low
+
+  * Fix subtree scope of ACL for cn=computers (Bug #34554)  
+
+ -- Felix Botner <botner@univention.de>  Tue, 17 Jun 2014 17:26:07 +0200
+
 univention-ldap (10.0.17-34) unstable; urgency=low
 
   * Add entryUUID to LDAP index (Bug #34815)
