--- a/services/univention-pkgdb/umc/python/pkgdb/de.po
+++ b/services/univention-pkgdb/umc/python/pkgdb/de.po
@@ -3,7 +3,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: univention-management-console-module-pkgdb\n"
 "Report-Msgid-Bugs-To: packages@univention.de\n"
-"POT-Creation-Date: 2013-08-22 23:27+0200\n"
+"POT-Creation-Date: 2014-06-17 03:31+0200\n"
 "PO-Revision-Date: 2011-10-22 15:11+0200\n"
 "Last-Translator: Frank Greif <fg@it25.de>\n"
 "Language-Team: LANGUAGE <LL@li.org>\n"
@@ -19,6 +19,10 @@ msgstr "Alle Eigenschaften"
 #: umc/python/pkgdb/__init__.py:195
 msgid "Config files only"
 msgstr "Nur Konfigurationsdateien"
+
+#: umc/python/pkgdb/__init__.py:213
+msgid "Could not establish connection to the database server"
+msgstr "Es konnte keine Verbindung zu dem Datenbankserver hergestellt werden"
 
 #: umc/python/pkgdb/__init__.py:181
 msgid "Deinstall"
