--- a/services/univention-apache/debian/changelog
+++ b/services/univention-apache/debian/changelog
@@ -1,3 +1,10 @@
+univention-apache (6.0.16-6) unstable; urgency=low
+
+  * actualised links to the Univention App Center in the overview page
+  (Bug #34864)
+
+ -- Lukas Walter <walter@univention.de>  Tue, 17 Jun 2014 18:29:32 +0100
+
 univention-apache (6.0.16-5) unstable; urgency=low
 
   * This update corrects the generation of ucs-overview links. The links
