* Add univentiondebug and ldap lib to linker call (Bug #35138)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51154 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-policy/debian/changelog
+++ b/base/univention-policy/debian/changelog
@@ -1,3 +1,9 @@
+univention-policy (6.0.2-1) unstable; urgency=low
+
+  * Add univentiondebug and ldap lib to linker call (Bug #35138)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 18 Jun 2014 06:23:15 +0200
+
 univention-policy (6.0.1-1) unstable; urgency=low
 
   * Activate ucslint (Bug #35138)
