--- a/base/univention-policy/debian/changelog
+++ b/base/univention-policy/debian/changelog
@@ -1,3 +1,9 @@
+univention-policy (6.0.2-2) unstable; urgency=low
+
+  * Added debian/ucslint.overrides (Bug #35138)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 18 Jun 2014 06:29:53 +0200
+
 univention-policy (6.0.2-1) unstable; urgency=low
 
   * Add univentiondebug and ldap lib to linker call (Bug #35138)
