--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.166-36) unstable; urgency=low
+
+  * Bug #35134: removed fixup and improved inline doc
+
+ -- Sönke Schwardt-Krummrich <schwardt@univention.de>  Wed, 18 Jun 2014 10:07:28 +0200
+
 ucs-test (4.0.166-35) unstable; urgency=low
 
   * Bug #33571: App Center: Test whether the server is registered on the
