--- a/base/univention-python/debian/changelog
+++ b/base/univention-python/debian/changelog
@@ -1,3 +1,9 @@
+univention-python (8.0.0-2) unstable; urgency=low
+
+  * Swtich to debian compat level 9 (Bug #35138)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 18 Jun 2014 11:51:39 +0200
+
 univention-python (8.0.0-1) unstable; urgency=low
 
   * Update to UCS 4.0 (Bug #35138)
