--- a/base/univention-debug/debian/changelog
+++ b/base/univention-debug/debian/changelog
@@ -1,3 +1,9 @@
+univention-debug (7.0.1-3) unstable; urgency=low
+
+  * Swtich to debian compat level 9 (Bug #35138)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 18 Jun 2014 11:51:28 +0200
+
 univention-debug (7.0.1-2) unstable; urgency=low
 
   * Added some more ucslint overrides (Bug #35138):
