univention-apache (6.0.16-7) unstable; urgency=low
  * place ucs overview entries without priorty at the end
  (Bug #33750)



git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51177 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-apache/debian/changelog
+++ b/services/univention-apache/debian/changelog
@@ -1,3 +1,10 @@
+univention-apache (6.0.16-7) unstable; urgency=low
+
+  * place ucs overview entries without priorty at the end
+  (Bug #33750)
+
+ -- Lukas Walter <walter@univention.de>  Wed, 18 Jun 2014 15:52:12 +0100
+
 univention-apache (6.0.16-6) unstable; urgency=low
 
   * actualised links to the Univention App Center in the overview page
