--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,9 @@
+univention-lib (4.0.0-3) unstable; urgency=low
+
+  * Call explicit python_support (Bug #35138)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 18 Jun 2014 16:03:50 +0200
+
 univention-lib (4.0.0-2) unstable; urgency=low
 
   * Swtich to debian compat level 9 (Bug #35138)
