--- a/base/univention-debug/debian/changelog
+++ b/base/univention-debug/debian/changelog
@@ -1,3 +1,9 @@
+univention-debug (7.0.1-4) unstable; urgency=low
+
+  * Call explicit python_support (Bug #35138)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 18 Jun 2014 16:30:36 +0200
+
 univention-debug (7.0.1-3) unstable; urgency=low
 
   * Swtich to debian compat level 9 (Bug #35138)
