--- a/base/univention-base-files/debian/changelog
+++ b/base/univention-base-files/debian/changelog
@@ -1,3 +1,9 @@
+univention-base-files (4.0.0-1) unstable; urgency=low
+
+  * Update to UCS 4.0 (Bug #35138)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 18 Jun 2014 16:42:53 +0200
+
 univention-base-files (3.0.4-7) unstable; urgency=low
 
   * Adjust description for ldap/client/retry/count
