* Added multiarch support (Bug #35138)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51185 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-debug/debian/changelog
+++ b/base/univention-debug/debian/changelog
@@ -1,3 +1,9 @@
+univention-debug (7.0.1-5) unstable; urgency=low
+
+  * Added multiarch support (Bug #35138)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 18 Jun 2014 17:41:43 +0200
+
 univention-debug (7.0.1-4) unstable; urgency=low
 
   * Call explicit python_support (Bug #35138)
