--- a/base/univention-config-registry/debian/changelog
+++ b/base/univention-config-registry/debian/changelog
@@ -1,3 +1,9 @@
+univention-config-registry (10.0.1-4) unstable; urgency=low
+
+  * Added multiarch support (Bug #35138)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 18 Jun 2014 17:41:40 +0200
+
 univention-config-registry (10.0.1-3) unstable; urgency=low
 
   * Call explicit python_support (Bug #35138)
