--- a/base/univention-policy/debian/changelog
+++ b/base/univention-policy/debian/changelog
@@ -1,3 +1,9 @@
+univention-policy (6.0.2-5) unstable; urgency=low
+
+  * Added multiarch support (Bug #35138)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 18 Jun 2014 17:41:46 +0200
+
 univention-policy (6.0.2-4) unstable; urgency=low
 
   * Call explicit python_support (Bug #35138)
