--- a/management/univention-management-console/debian/changelog
+++ b/management/univention-management-console/debian/changelog
@@ -1,9 +1,15 @@
+univention-management-console (6.0.26-7) unstable; urgency=low
+
+  * version bump, corrected bug number in changelog (Bug #34723)
+
+ -- Lukas Walter <walter@univention.de>  Wed, 18 Jun 2014 17:39:06 +0200
+
 univention-management-console (6.0.26-6) unstable; urgency=low
 
   * added possibility for UMC modules to return a user friendly error message
   	when initialization fails by raising instances of UMC_ModuleInitError
     and passing a string as proper description
-    (Bug #33673)
+    (Bug #34723)
 
  -- Lukas Walter <walter@univention.de>  Tue, 17 Jun 2014 17:02:04 +0200
 
