--- a/services/univention-pkgdb/debian/changelog
+++ b/services/univention-pkgdb/debian/changelog
@@ -1,11 +1,17 @@
+univention-pkgdb (7.0.11-3) unstable; urgency=low
+
+  * version bump, corrected bug number in changelog (Bug #34723)
+    
+ -- Lukas Walter <walter@univention.de>  Wed, 18 Jun 2014 17:41:12 +0200
+
 univention-pkgdb (7.0.11-2) unstable; urgency=low
 
   * when UMC module initializiation fails because no connection to the
     postgreSQL server could be established, provide a user friendly error
     message instead of a traceback by raising an UMC_ModuleInitError
-    (Bug #33673)
+    (Bug #34723)
 
- -- Lukas Walter <walter@univention.de>  Tue, 17 Jun 2014 17:24:19 +0200i
+ -- Lukas Walter <walter@univention.de>  Tue, 17 Jun 2014 17:24:19 +0200
 
 univention-pkgdb (7.0.11-1) unstable; urgency=low
 
