* Update to UCS 4.0 (Bug #35138)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51190 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-debootstrap/debian/changelog
+++ b/base/univention-debootstrap/debian/changelog
@@ -1,3 +1,9 @@
+univention-debootstrap (5.0.0-1) unstable; urgency=low
+
+  * Update to UCS 4.0 (Bug #35138)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Thu, 19 Jun 2014 06:23:57 +0200
+
 univention-debootstrap (4.0.3-5) unstable; urgency=low
 
   * fixed missing /usr/share/debootstrap/functions-ucs3 (Bug #26179)
