--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.166-37) unstable; urgency=low
+
+  * Bug #34343: cleanup fixes
+
+ -- Alexander Kläser <klaeser@univention.de>  Thu, 19 Jun 2014 11:37:02 +0200
+
 ucs-test (4.0.166-36) unstable; urgency=low
 
   * Bug #35134: removed fixup and improved inline doc
