* Bug #34343: cleanup fixes again
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51208 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.166-38) unstable; urgency=low
+
+  * Bug #34343: cleanup fixes again
+
+ -- Alexander Kläser <klaeser@univention.de>  Fri, 20 Jun 2014 10:53:00 +0200
+
 ucs-test (4.0.166-37) unstable; urgency=low
 
   * Bug #34343: cleanup fixes
