fixed circular import (Bug #34723)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51213 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console/debian/changelog
+++ b/management/univention-management-console/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console (6.0.24-13) unstable; urgency=low
+
+  * fixed circular import (Bug #34723)
+
+ -- Lukas Walter <walter@univention.de>  Fri, 19 Jun 2014 13:09:02 +0200
+
 univention-management-console (6.0.24-12) unstable; urgency=low
 
   * version bump, corrected bug number in changelog (Bug #34723)
