migration to ucs-4.0 (Bug #35146)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51221 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,4 +1,10 @@
-univention-directory-manager-modules (9.0.77-1) unstable; urgency=low
+univention-directory-manager-modules (9.0.76-5) unstable; urgency=low
+
+  * fixed typo (Bug #34250)
+
+ -- Lukas Walter <walter@univention.de>  Tue, 17 Jun 2014 14:03:12 +0200
+
+univention-directory-manager-modules (9.0.76-4) unstable; urgency=low
 
   * Moved input field 'Organisation' from 'Personal Information' to
     'Organisation'
