--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.166-40) unstable; urgency=low
+
+  * Bug #34343: fixed wrong output
+
+ -- Alexander Kläser <klaeser@univention.de>  Fri, 20 Jun 2014 14:38:56 +0200
+
 ucs-test (4.0.166-39) unstable; urgency=low
 
   * Bug #34343: fixed reference to not existing variable
