--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-manager-modules (10.0.0-1) unstable; urgency=low
+
+  * update to UCS 4.0 (Bug #35146)
+
+ -- Lukas Walter <walter@univention.de>  Fri, 20 Jun 2014 15:14:08 +0200
+
 univention-directory-manager-modules (9.0.76-5) unstable; urgency=low
 
   * fixed typo (Bug #34250)
