--- a/services/univention-squid/debian/changelog
+++ b/services/univention-squid/debian/changelog
@@ -1,3 +1,9 @@
+univention-squid (8.0.0-1) unstable; urgency=low
+
+  * Update to UCS 4.0 (Bug #35147) 
+
+ -- Felix Botner <botner@univention.de>  Fri, 20 Jun 2014 16:10:19 +0200
+
 univention-squid (7.0.4-2) unstable; urgency=low
 
   * added UCRV squid/forwardedfor (Bug #34025) 
