--- a/services/univention-apache/debian/changelog
+++ b/services/univention-apache/debian/changelog
@@ -1,3 +1,9 @@
+univention-apache (7.0.0-1) unstable; urgency=low
+
+  * Update to UCS 4.0 (Bug #35147) 
+
+ -- Felix Botner <botner@univention.de>  Fri, 20 Jun 2014 16:18:54 +0200
+
 univention-apache (6.0.16-7) unstable; urgency=low
 
   * place ucs overview entries without priorty at the end
