--- a/services/univention-bind/debian/changelog
+++ b/services/univention-bind/debian/changelog
@@ -1,3 +1,9 @@
+univention-bind (9.0.0-1) unstable; urgency=low
+
+  * Update to UCS 4.0 (Bug #35147) 
+
+ -- Felix Botner <botner@univention.de>  Fri, 20 Jun 2014 16:23:35 +0200
+
 univention-bind (8.0.5-1) unstable; urgency=low
 
   * Change group to bind for the zone files (Bug #33157)
