Update to UCS 4.0 (Bug #35138)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51232 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-dhcp/debian/changelog
+++ b/services/univention-dhcp/debian/changelog
@@ -1,3 +1,9 @@
+univention-dhcp (9.0.0-1) unstable; urgency=low
+
+  * Update to UCS 4.0 (Bug #35138) 
+
+ -- Felix Botner <botner@univention.de>  Fri, 20 Jun 2014 16:28:22 +0200
+
 univention-dhcp (8.0.0-3) unstable; urgency=low
 
   * Update/review UCR variable descriptions (Bug #30948)
