* Bug #34317: Adapted the default link on UCS overview page.
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51237 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-management-console-frontend/debian/changelog
+++ b/management/univention-management-console-frontend/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-frontend (3.0.152-34) unstable; urgency=low
+
+  * Bug #34317: Adapted the default link on UCS overview page.
+
+ -- Alexander Kramer <kramer@univention.de>  Mon, 23 Jun 2014 09:44:53 +0200
+
 univention-management-console-frontend (3.0.152-33) unstable; urgency=low
 
   * when newly installed on systems which are neither master nor backup
