Update to UCS 4.0 (Bug #35138)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51239 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-nfs/debian/changelog
+++ b/services/univention-nfs/debian/changelog
@@ -1,3 +1,9 @@
+univention-nfs (7.0.0-1) unstable; urgency=low
+
+  * Update to UCS 4.0 (Bug #35138) 
+
+ -- Felix Botner <botner@univention.de>  Mon, 23 Jun 2014 11:17:26 +0200
+
 univention-nfs (6.0.3-1) unstable; urgency=low
 
   * Added idmapd configuration option nfs/common/idmapd (default=yes)
