rerun listener handler with listener_old (Bug #34759)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51245 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-replication/debian/changelog
+++ b/management/univention-directory-replication/debian/changelog
@@ -1,3 +1,9 @@
+univention-directory-replication (7.0.1-6) unstable; urgency=low
+
+  * rerun listener handler with listener_old (Bug #34759)
+
+ -- Felix Botner <botner@univention.de>  Mon, 23 Jun 2014 13:39:44 +0200
+
 univention-directory-replication (7.0.1-5) unstable; urgency=low
 
   * The entryUUID between master and slave could be different. The
