fail if samba join fails (Bug #34422)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51252 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-samba4/debian/changelog
+++ b/services/univention-samba4/debian/changelog
@@ -1,3 +1,10 @@
+univention-samba4 (3.0.39-25) unstable; urgency=low
+
+  * always clean up the samba dir before join
+  * fail if samba join fails (Bug #34422)
+
+ -- Felix Botner <botner@univention.de>  Tue, 24 Jun 2014 09:04:10 +0200
+
 univention-samba4 (3.0.39-24) unstable; urgency=low
 
   * Added samba/acl/allow/execute/always (Bug #33785) 
