--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,12 @@
+univention-management-console-module-appcenter (3.0.51-20) unstable; urgency=low
+
+  * Bug #35177: All installed apps are saved in the UCR variable
+    repository/app_center/installed
+  * Bug #35176: Do not show a note about informing the vendor when the app is
+    a UCS component
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Tue, 24 Jun 2014 16:37:36 +0200
+
 univention-management-console-module-appcenter (3.0.51-19) unstable; urgency=low
 
   * Bug #34243: move reload of UMC modules into lib/server
