--- a/management/univention-management-console-module-appcenter/debian/changelog
+++ b/management/univention-management-console-module-appcenter/debian/changelog
@@ -1,3 +1,9 @@
+univention-management-console-module-appcenter (3.0.51-21) unstable; urgency=low
+
+  * Bug #35177: Setting UCR variable in join script, not postinst
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Wed, 25 Jun 2014 12:33:56 +0200
+
 univention-management-console-module-appcenter (3.0.51-20) unstable; urgency=low
 
   * Bug #35177: All installed apps are saved in the UCR variable
