--- a/base/univention-updater/debian/changelog
+++ b/base/univention-updater/debian/changelog
@@ -1,3 +1,9 @@
+univention-updater (9.0.41-2) unstable; urgency=low
+
+  * Bug #35022: Do not register apps when only installing master packages
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Wed, 25 Jun 2014 15:41:48 +0200
+
 univention-updater (9.0.41-1) unstable; urgency=low
 
   * Unset uuid/license if univentionLicenseKeyID is missing in license (Bug #34809)
