--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.166-41) unstable; urgency=low
+
+  * Bug #35177: Added tests for app codes
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Wed, 25 Jun 2014 16:26:10 +0200
+
 ucs-test (4.0.166-40) unstable; urgency=low
 
   * Bug #34343: fixed wrong output
