--- a/management/univention-ldap/debian/changelog
+++ b/management/univention-ldap/debian/changelog
@@ -1,3 +1,10 @@
+univention-ldap (10.0.17-36) unstable; urgency=low
+
+  * New share-userquota binary attribute:
+    Reapply quota on every login (Bug #33174)
+
+ -- Erik Damrose <damrose@univention.de>  Thu, 26 Jun 2014 11:59:47 +0200
+
 univention-ldap (10.0.17-35) unstable; urgency=low
 
   * Fix subtree scope of ACL for cn=computers (Bug #34554)  
