--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,10 @@
+univention-directory-manager-modules (9.0.76-6) unstable; urgency=low
+
+  * Added new option to share-userquota policy: Reapply quota on every 
+    login (Bug #33174) 
+
+ -- Erik Damrose <damrose@univention.de>  Thu, 26 Jun 2014 12:42:24 +0200
+
 univention-directory-manager-modules (9.0.76-5) unstable; urgency=low
 
   * fixed typo (Bug #34250)
