* Merged UCS 3.2-2 errata (Bug #33174): Added new option to share-userquota policy: Reapply quota on every login
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51294 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,10 @@
+univention-directory-manager-modules (10.0.0-2) unstable; urgency=low
+
+  * Merged UCS 3.2-2 errata (Bug #33174): Added new option to share-userquota
+    policy: Reapply quota on every login
+
+ -- Erik Damrose <damrose@univention.de>  Thu, 26 Jun 2014 12:47:43 +0200
+
 univention-directory-manager-modules (10.0.0-1) unstable; urgency=low
 
   * update to UCS 4.0 (Bug #35146)
