* 00_base/96rename_domain_*: removed workaround for Bug #34802
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51313 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.166-42) unstable; urgency=low
+
+  * 00_base/96rename_domain_*: removed workaround for Bug #34802
+
+ -- Stefan Gohmann <gohmann@univention.de>  Mon, 30 Jun 2014 07:36:26 +0200
+
 ucs-test (4.0.166-41) unstable; urgency=low
 
   * Bug #35177: Added tests for app codes
