--- a/base/univention-grub/debian/changelog
+++ b/base/univention-grub/debian/changelog
@@ -1,3 +1,9 @@
+univention-grub (8.0.0-1) unstable; urgency=low
+
+  * Update to UCS 4.0 (Bug #35138)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Mon, 30 Jun 2014 08:20:04 +0200
+
 univention-grub (7.0.5-1) unstable; urgency=low
 
   * Bug #33123: remove uniboot.png/.xpm.gz in preinst to prevent update failure
