--- a/base/univention-home-mounter/debian/changelog
+++ b/base/univention-home-mounter/debian/changelog
@@ -1,3 +1,9 @@
+univention-home-mounter (6.0.0-1) unstable; urgency=low
+
+  * Update to UCS 4.0 (Bug #35138)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Mon, 30 Jun 2014 08:23:25 +0200
+
 univention-home-mounter (5.0.1-4) unstable; urgency=low
 
   * convert to python
