--- a/base/univention-initrd/debian/changelog
+++ b/base/univention-initrd/debian/changelog
@@ -1,3 +1,9 @@
+univention-initrd (7.0.0-1) unstable; urgency=low
+
+  * Update to UCS 4.0 (Bug #35138)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Mon, 30 Jun 2014 08:25:37 +0200
+
 univention-initrd (6.0.0-4) unstable; urgency=low
 
   * Update/review UCR variable descriptions (Bug #30943)
