--- a/base/univention-ipcalc/debian/changelog
+++ b/base/univention-ipcalc/debian/changelog
@@ -1,3 +1,9 @@
+univention-ipcalc (6.0.0-1) unstable; urgency=low
+
+  * Update to UCS 4.0 (Bug #35138)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Mon, 30 Jun 2014 08:29:12 +0200
+
 univention-ipcalc (5.0.0-3) unstable; urgency=low
 
   * Add missing Depends: python-ipaddr (Bug #32931)
