* Update to UCS 4.0 (Bug #35138)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51329 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-licence/debian/changelog
+++ b/base/univention-licence/debian/changelog
@@ -1,3 +1,9 @@
+univention-licence (6.0.0-1) unstable; urgency=low
+
+  * Update to UCS 4.0 (Bug #35138)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Mon, 30 Jun 2014 08:32:45 +0200
+
 univention-licence (5.0.5-1) unstable; urgency=low
 
   * The license import and check is now case insensitive (Bug #29883)
