--- a/base/univention-maintenance/debian/changelog
+++ b/base/univention-maintenance/debian/changelog
@@ -1,3 +1,9 @@
+univention-maintenance (7.0.0-1) unstable; urgency=low
+
+  * Update to UCS 4.0 (Bug #35138)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Mon, 30 Jun 2014 08:38:50 +0200
+
 univention-maintenance (6.0.0-1) unstable; urgency=low
 
   * Bump version for UCS 3.2, update copyright years for 2013
