* Update to UCS 4.0 (Bug #35138)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51334 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-newsid/debian/changelog
+++ b/base/univention-newsid/debian/changelog
@@ -1,3 +1,9 @@
+univention-newsid (6.0.0-1) unstable; urgency=low
+
+  * Update to UCS 4.0 (Bug #35138)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Mon, 30 Jun 2014 08:44:16 +0200
+
 univention-newsid (5.0.0-1) unstable; urgency=low
 
   * Bump version for UCS 3.1
