--- a/base/univention-printclient/debian/changelog
+++ b/base/univention-printclient/debian/changelog
@@ -1,3 +1,9 @@
+univention-printclient (8.0.0-1) unstable; urgency=low
+
+  * Update to UCS 4.0 (Bug #35138)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Mon, 30 Jun 2014 08:49:56 +0200
+
 univention-printclient (7.0.0-3) unstable; urgency=low
 
   * Update/review UCR variable descriptions (Bug #30943)
