--- a/base/univention-licence/debian/changelog
+++ b/base/univention-licence/debian/changelog
@@ -1,3 +1,9 @@
+univention-licence (6.0.1-1) unstable; urgency=low
+
+  * Fixed multiarch build (Bug #35138)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Mon, 30 Jun 2014 08:51:46 +0200
+
 univention-licence (6.0.0-1) unstable; urgency=low
 
   * Update to UCS 4.0 (Bug #35138)
