--- a/base/univention-python-heimdal/debian/changelog
+++ b/base/univention-python-heimdal/debian/changelog
@@ -1,3 +1,9 @@
+univention-python-heimdal (5.0.0-1) unstable; urgency=low
+
+  * Update to UCS 4.0 (Bug #35138)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Mon, 30 Jun 2014 09:00:37 +0200
+
 univention-python-heimdal (4.0.4-1) unstable; urgency=low
 
   * version bump (Bug #29747)
