* Update to UCS 4.0 (Bug #35138)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51344 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-quota/debian/changelog
+++ b/base/univention-quota/debian/changelog
@@ -1,3 +1,9 @@
+univention-quota (9.0.0-1) unstable; urgency=low
+
+  * Update to UCS 4.0 (Bug #35138)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Mon, 30 Jun 2014 09:06:39 +0200
+
 univention-quota (8.0.6-3) unstable; urgency=low
 
   * Bug #31277: enable possibility to configure the root (/) partition
