* Update to UCS 4.0 (Bug #35138)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51346 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-runit/debian/changelog
+++ b/base/univention-runit/debian/changelog
@@ -1,3 +1,9 @@
+univention-runit (6.0.0-1) unstable; urgency=low
+
+  * Update to UCS 4.0 (Bug #35138)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Mon, 30 Jun 2014 09:09:04 +0200
+
 univention-runit (5.0.0-2) unstable; urgency=low
 
   * corrected usage message of init script, which erroneously printed
