* Update to UCS 4.0 (Bug #35138) * Removed mobile and managed client packages
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51348 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-server/debian/changelog
+++ b/base/univention-server/debian/changelog
@@ -1,3 +1,10 @@
+univention-server (10.0.0-1) unstable; urgency=low
+
+  * Update to UCS 4.0 (Bug #35138)
+  * Removed mobile and managed client packages
+
+ -- Stefan Gohmann <gohmann@univention.de>  Mon, 30 Jun 2014 09:11:21 +0200
+
 univention-server (9.0.0-4) unstable; urgency=low
 
   * Bump version for UCS 3.2, update copyright years for 2013
