--- a/base/univention-skel/debian/changelog
+++ b/base/univention-skel/debian/changelog
@@ -1,3 +1,9 @@
+univention-skel (7.0.0-1) unstable; urgency=low
+
+  * Update to UCS 4.0 (Bug #35138)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Mon, 30 Jun 2014 09:14:57 +0200
+
 univention-skel (6.0.0-3) unstable; urgency=low
 
   * Update/review UCR variable descriptions (Bug #30943)
