--- a/base/univention-ssh/debian/changelog
+++ b/base/univention-ssh/debian/changelog
@@ -1,3 +1,9 @@
+univention-ssh (6.0.0-1) unstable; urgency=low
+
+  * Update to UCS 4.0 (Bug #35138)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Mon, 30 Jun 2014 09:17:14 +0200
+
 univention-ssh (5.0.1-1) unstable; urgency=low
 
   * replaced package dependency univention-config-registry
