--- a/base/univention-ssl/debian/changelog
+++ b/base/univention-ssl/debian/changelog
@@ -1,3 +1,9 @@
+univention-ssl (9.0.0-1) unstable; urgency=low
+
+  * Update to UCS 4.0 (Bug #35138)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Mon, 30 Jun 2014 09:18:49 +0200
+
 univention-ssl (8.0.0-4) unstable; urgency=low
 
   * set correct permissions for "/etc/univention/ssl" on certificate renewal (Bug #31941)
