--- a/base/univention-base-files/debian/changelog
+++ b/base/univention-base-files/debian/changelog
@@ -1,3 +1,9 @@
+univention-base-files (4.0.0-2) unstable; urgency=low
+
+  * Set package priority to important (Bug #35138)
+
+ -- Stefan Gohmann <gohmann@univention.de>  Mon, 30 Jun 2014 10:16:51 +0200
+
 univention-base-files (4.0.0-1) unstable; urgency=low
 
   * Update to UCS 4.0 (Bug #35138)
