* Merge from UCS 3.2-2 errata (Bug #33174)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51360 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-quota/debian/changelog
+++ b/base/univention-quota/debian/changelog
@@ -1,3 +1,9 @@
+univention-quota (9.0.0-2) unstable; urgency=low
+
+  * Merge from UCS 3.2-2 errata (Bug #33174) 
+
+ -- Erik Damrose <damrose@univention.de>  Mon, 30 Jun 2014 10:43:22 +0200
+
 univention-quota (9.0.0-1) unstable; urgency=low
 
   * Update to UCS 4.0 (Bug #35138)
