Ship the archive signature key for the upcoming UCS 4.0 (Bug #35213)
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51361 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-archive-key/debian/changelog
+++ b/base/univention-archive-key/debian/changelog
@@ -1,3 +1,9 @@
+univention-archive-key (4.0.0-4) unstable; urgency=low
+
+  * Ship the archive signature key for the upcoming UCS 4.0 (Bug #35213)
+
+ -- Moritz Mühlenhoff <muehlenhoff@univention.de>  Mon, 30 Jun 2014 11:49:54 +0200
+
 univention-archive-key (4.0.0-3) unstable; urgency=low
 
   * Readd .install file (Bug #23926)
