* Bug #35177: Made tests for app codes executable
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51380 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/test/ucs-test/debian/changelog
+++ b/test/ucs-test/debian/changelog
@@ -1,3 +1,9 @@
+ucs-test (4.0.166-45) unstable; urgency=low
+
+  * Bug #35177: Made tests for app codes executable
+
+ -- Dirk Wiesenthal <wiesenthal@univention.de>  Tue, 01 Jul 2014 10:03:58 +0200
+
 ucs-test (4.0.166-44) unstable; urgency=low
 
   * 53_samba-common/05domain-join-ntlm-auth: removed net ads/rpc join
