* Bug #31277: enable possibility to configure the root (/) partition also for XFS partitions: this appends the rootflags="usrquota" option to the kernel line and suggests a system reboot.
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51384 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-quota/debian/changelog
+++ b/base/univention-quota/debian/changelog
@@ -1,3 +1,11 @@
+univention-quota (8.0.6-5) unstable; urgency=low
+
+  * Bug #31277: enable possibility to configure the root (/) partition also
+  	for XFS partitions: this appends the rootflags="usrquota" option to the kernel line
+  	and suggests a system reboot.
+
+ -- Florian Best <best@univention.de>  Tue, 01 Jul 2014 11:46:50 +0200
+
 univention-quota (8.0.6-4) unstable; urgency=low
 
   * Update for univention-user-quota. Evaluate the share policy flag 
