--- a/base/univention-quota/debian/changelog
+++ b/base/univention-quota/debian/changelog
@@ -1,3 +1,9 @@
+univention-quota (8.0.6-6) unstable; urgency=low
+
+  * fiy typo; (Bug #31277)
+
+ -- Florian Best <best@univention.de>  Tue, 01 Jul 2014 12:07:30 +0200
+
 univention-quota (8.0.6-5) unstable; urgency=low
 
   * Bug #31277: enable possibility to configure the root (/) partition also
