univention-directory-manager-modules (10.0.1-1) unstable; urgency=low
  * added support for svgz files to udm_extension listener module
  (Bug #35062)


univention-lib (4.0.1-1) unstable; urgency=low

  * corrected svgz treatment in umc_module.py (Bug #35062)



git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-4.0/ucs-4.0-0@51404 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/management/univention-directory-manager-modules/debian/changelog
+++ b/management/univention-directory-manager-modules/debian/changelog
@@ -1,3 +1,10 @@
+univention-directory-manager-modules (10.0.1-1) unstable; urgency=low
+
+  * added support for svgz files to udm_extension listener module
+  (Bug #35062)
+
+ -- Lukas Walter <walter@univention.de>  Tue, 01 Jul 2014 14:42:06 +0200
+
 univention-directory-manager-modules (10.0.0-2) unstable; urgency=low
 
   * Merged UCS 3.2-2 errata (Bug #33174): Added new option to share-userquota
