--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,7 @@
+univention-lib (4.0.1-1) unstable; urgency=low
+
+  * corrected svgz treatment in umc_module.py (Bug #35062)
+
 univention-lib (4.0.0-3) unstable; urgency=low
 
   * Call explicit python_support (Bug #35138)
