univention-lib (3.0.26-21) unstable; urgency=low
  * corrected svgz treatment in umc_module.py (Bug #35062)


univention-directory-manager-modules (9.0.76-7) unstable; urgency=low

  * added support for svgz files to udm_extension listener module
  (Bug #35062)




git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51405 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/base/univention-lib/debian/changelog
+++ b/base/univention-lib/debian/changelog
@@ -1,3 +1,9 @@
+univention-lib (3.0.26-21) unstable; urgency=low
+
+  * corrected svgz treatment in umc_module.py (Bug #35062)
+
+ -- Lukas Walter <walter@univention.de>  Tue, 01 Jul 2014 14:45:16 +0200
+
 univention-lib (3.0.26-20) unstable; urgency=low
 
   * Fix slapd restart on LDAP schema activation (Bug #34800)
@@ -23,7 +29,7 @@ univention-lib (3.0.26-17) unstable; urgency=medium
 
  -- Arvid Requate <requate@univention.de>  Thu, 23 Jan 2014 18:24:03 +0100
 
-univention-lib (3.0.26-16) UNRELEASED; urgency=medium
+univention-lib (3.0.26-16) unstable; urgency=medium
 
   * Merge userNameMapping and groupNameMapping functions into
     custom_username and custom_groupname (Bug #33893)
