* Don't synchronize windows computers while updating (Bug #35091) * Use KINIT in AD member mode only (Bug #35091) * Set synced flag in AD member mode only (Bug #35091) * Bump version
git-svn-id: svn+ssh://billy.knut.univention.de/var/univention/svn/dev/branches/ucs-3.2/ucs-3.2-2@51409 1b283449-9f2f-0410-b571-8eb228e1a901

--- a/services/univention-ad-connector/debian/changelog
+++ b/services/univention-ad-connector/debian/changelog
@@ -1,3 +1,12 @@
+univention-ad-connector (8.0.17-7) unstable; urgency=low
+
+  * Don't synchronize windows computers while updating (Bug #35091)
+  * Use KINIT in AD member mode only (Bug #35091)
+  * Set synced flag in AD member mode only (Bug #35091)
+  * Bump version
+
+ -- Stefan Gohmann <gohmann@univention.de>  Wed, 02 Jul 2014 07:48:54 +0200
+
 univention-ad-connector (8.0.17-5) unstable; urgency=low
 
   * Merge from ucs-in-ad-domain preview (Bug #35091)
